gitops-apps/grafana/base/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - loki.zmartin.me
      secretName: wildcard-zmartin-me-tls

  rules:
    - host: loki.zmartin.me
      http:
        paths:
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki
                port:
                  number: 3100
